--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 < html>
   <title>Sample Website #1</title>
   <body>
-    <img src = "Fancy.jpg">   
+    <img src = "Fancy.jpeg">   
    <h1> My First Website</h1>
    <p>Hello World! This is my first website. Yay!
    <p> Here is another paragragh of text.
