--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 < html>
   <title>Sample Website #1</title>
   <body>
-    <img src = "Fancy.jpeg">   
+    <img src = "Fancy.jpg">   
    <h1> My First Website</h1>
    <p>Hello World! This is my first website. Yay!
-   <p> Here is another paragragh of text.
+   <p> Here is another paragragh of text.  
    <hr>
    <h2> A subsection title here </h2>
    <p> And here is another paragragh.
