--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 < html>
   <title>Sample Website #1</title>
-  <body>bgcolor=pink>
+  <body bgcolor=pink>
     <img src = "Fancy.jpg" width="25%">
     </a>
    <h1> My First Website</h1>
