--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    <p> Here is another paragragh of text.  
    <hr>
    <h2> A subsection title here </h2>
+     <img src = "Princess.jpg" width="30%">
+  </a>
    <p> And here is another paragragh.
    Notice that spacing doesn't matter.
    Everthing is printed on one line on the page.
