--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <img src = "Fancy.jpg" width="25%">
     </a>
    <h1> My First Website</h1>
-                                                   <img src = "Princess.jpg" width="25%">
-                                                   </a>
-   <p>Hello World! This is my first website. Yay!
+   <p>Hello World! This is my first website. Yay! <img src = "Princess.jpg" width="25%">
+   </a>
    <p> Here is another paragragh of text.  
    <hr>
    <h2> A subsection title here </h2>
