--- a/Schedule.html
+++ b/Schedule.html
@@ -1,6 +1,6 @@
 <html>
   <title> My schedule</title>
-  <body>
+  <body>  bgcolor=pink>
   <table border=1px>
     <caption>My Fall 2018-19 Class Schedule</caption>
   <tr>
@@ -19,10 +19,30 @@
            <td>SE224</td>
         </tr>
        <tr>
-            <td>3</td>
+            <td>8</td>
             <td>Advisory</td>
             <td>NW104</td>
        </tr>
+       <tr>
+         <td>3</td>
+         <td>Health</td>
+         <td>NE137</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Enlgish</td>
+      <td>NW127</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Math</td>
+      <td>NW126</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Biology</td>
+      <td>NW221</td>
+    </tr>
       </table>
     </body>
   </html>
