--- a/Schedule.html
+++ b/Schedule.html
@@ -1,6 +1,6 @@
 <html>
   <title> My schedule</title>
-  <body>  bgcolor=pink>
+  <body  bgcolor=pink>
   <table border=1px>
     <caption>My Fall 2018-19 Class Schedule</caption>
   <tr>
