--- a/Schedule.html
+++ b/Schedule.html
@@ -9,37 +9,37 @@
      <th>Room</th>
          </tr>
         <tr>
-          <td>1</td>
+          <td align="center" >1</td>
           <td>Chef</td>
           <td>NW114</td>
         </tr>
         <tr>
-           <td>2</td>
+           <td align="center">2</td>
            <td>CSP</td>
            <td>SE224</td>
         </tr>
        <tr>
-            <td>8</td>
+            <td align="center">8</td>
             <td>Advisory</td>
             <td>NW104</td>
        </tr>
        <tr>
-         <td>3</td>
+         <td align="center" >3</td>
          <td>Health</td>
          <td>NE137</td>
     </tr>
     <tr>
-      <td>4</td>
+      <td align="center" >4</td>
       <td>Enlgish</td>
       <td>NW127</td>
     </tr>
     <tr>
-      <td>5</td>
+      <td  align="center" >5</td>
       <td>Math</td>
       <td>NW126</td>
     </tr>
     <tr>
-      <td>6</td>
+      <td  align="center" >6</td>
       <td>Biology</td>
       <td>NW221</td>
     </tr>
