--- a/Schedule.html
+++ b/Schedule.html
@@ -14,6 +14,9 @@
           <td>NW114</td>
         </tr>
         <tr>
+          <td>Mrs.Hampson</td>
+        </tr>
+        <tr>
            <td align="center">2</td>
            <td>CSP</td>
            <td>SE224</td>
