--- a/Schedule.html
+++ b/Schedule.html
@@ -9,8 +9,8 @@
      <th>Room</th>
          </tr>
         <tr>
-          <td align="center" >1</td>
-          <td>Chef</td>
+          <td align="center" rowspan=2>1</td>
+          <td rowspan=2>Chef</td>
           <td>NW114</td>
         </tr>
         <tr>
