--- a/Schedule.html
+++ b/Schedule.html
@@ -17,34 +17,52 @@
           <td>Mrs.Hampson</td>
         </tr>
         <tr>
-           <td align="center">2</td>
-           <td>CSP</td>
+           <td align="center" rowspan=2>2</td>
+           <td rowspan=2 >CSP</td>
            <td>SE224</td>
         </tr>
+        <tr>
+          <td>Mr.Chan</td>
+    </tr>
        <tr>
-            <td align="center">8</td>
-            <td>Advisory</td>
+            <td align="center" rowspan=2 >8</td>
+            <td rowspan=2 >Advisory</td>
             <td>NW104</td>
        </tr>
+    <tr>
+      <td> Mrs.Oshie</td>
+    </tr>
        <tr>
-         <td align="center" >3</td>
-         <td>Health</td>
+         <td align="center" rowspan=2 >3</td>
+         <td rowspan=2 >Health</td>
          <td>NE137</td>
     </tr>
     <tr>
-      <td align="center" >4</td>
-      <td>Enlgish</td>
+      <td>Mrs.Hampson</td>
+    </tr>
+    <tr>
+      <td align="center" rowspan=2 >4</td>
+      <td rowspan=2 >Enlgish</td>
       <td>NW127</td>
     </tr>
     <tr>
-      <td  align="center" >5</td>
-      <td>Math</td>
+      <td>Mr.Moliter</td>
+    </tr>
+    <tr>
+      <td  align="center" rowspan=2 >5</td>
+      <td rowspan=2 >Math</td>
       <td>NW126</td>
     </tr>
     <tr>
-      <td  align="center" >6</td>
-      <td>Biology</td>
+      <td>Mrs.Yiesley</td>
+    </tr>
+    <tr>
+      <td  align="center" rowspan=2 >6</td>
+      <td rowspan=2>Biology</td>
       <td>NW221</td>
+    </tr>
+    <tr>
+      <td>Mrs.Russel</td>
     </tr>
       </table>
     </body>
