--- a/Schedule.html
+++ b/Schedule.html
@@ -4,9 +4,9 @@
   <table border=1px>
     <caption>My Fall 2018-19 Class Schedule</caption>
   <tr>
-     <th> Period</th>
-     <th>Class</th>
-     <th>Room</th>
+     <th bgcolor=white > Period</th>
+     <th bgcolor=purple >Class</th>
+     <th bgcolor=blue>Room</th>
          </tr>
         <tr>
           <td align="center" rowspan=2>1</td>
@@ -54,7 +54,7 @@
       <td>NW126</td>
     </tr>
     <tr>
-      <td>Mrs.Yiesley</td>
+      <td>Mrs.Yeisley</td>
     </tr>
     <tr>
       <td  align="center" rowspan=2 >6</td>
