--- a/Schedule.html
+++ b/Schedule.html
@@ -5,8 +5,8 @@
     <caption>My Fall 2018-19 Class Schedule</caption>
   <tr>
      <th bgcolor=white > Period</th>
-     <th bgcolor=purple >Class</th>
-     <th bgcolor=blue>Room</th>
+     <th bgcolor=white >Class</th>
+     <th bgcolor=white>Room</th>
          </tr>
         <tr>
           <td align="center" rowspan=2>1</td>
