--- a/Schedule.html
+++ b/Schedule.html
@@ -1,7 +1,7 @@
 <html>
   <title> My schedule</title>
   <body  bgcolor=pink>
-  <table border=1px>
+  <table border=1px bgcolor=white>
     <caption>My Fall 2018-19 Class Schedule</caption>
   <tr>
      <th bgcolor=white > Period</th>
