--- a/Schedule.html
+++ b/Schedule.html
@@ -10,6 +10,7 @@
          </tr>
         <tr>
           <td align="center" rowspan=2>1</td>
+          <td>7:20-8:10</td>
           <td rowspan=2>Chef</td>
           <td>NW114</td>
         </tr>
@@ -18,6 +19,7 @@
         </tr>
         <tr>
            <td align="center" rowspan=2>2</td>
+          <td>8:15-9:05</td>
            <td rowspan=2 >CSP</td>
            <td>SE224</td>
         </tr>
@@ -26,6 +28,7 @@
     </tr>
        <tr>
             <td align="center" rowspan=2 >8</td>
+         <td>9:10-9:35</td>
             <td rowspan=2 >Advisory</td>
             <td>NW104</td>
        </tr>
@@ -34,11 +37,15 @@
     </tr>
        <tr>
          <td align="center" rowspan=2 >3</td>
+         <td>9:40-10:00</td>
          <td rowspan=2 >Health</td>
          <td>NE137</td>
     </tr>
     <tr>
       <td>Mrs.Hampson</td>
+    </tr>
+    <tr>
+      <td>First Lunch</td>
     </tr>
     <tr>
       <td align="center" rowspan=2 >4</td>
