--- a/Schedule.html
+++ b/Schedule.html
@@ -10,7 +10,7 @@
          </tr>
         <tr>
           <td align="center" rowspan=2>1</td>
-          <td>7:20-8:10</td>
+          <td colspan=2 >7:20-8:10</td>
           <td rowspan=2>Chef</td>
           <td>NW114</td>
         </tr>
@@ -19,7 +19,7 @@
         </tr>
         <tr>
            <td align="center" rowspan=2>2</td>
-          <td>8:15-9:05</td>
+          <tdcolspan=2 >8:15-9:05</td>
            <td rowspan=2 >CSP</td>
            <td>SE224</td>
         </tr>
@@ -28,7 +28,7 @@
     </tr>
        <tr>
             <td align="center" rowspan=2 >8</td>
-         <td>9:10-9:35</td>
+         <td colspan=2 >9:10-9:35</td>
             <td rowspan=2 >Advisory</td>
             <td>NW104</td>
        </tr>
@@ -37,7 +37,7 @@
     </tr>
        <tr>
          <td align="center" rowspan=2 >3</td>
-         <td>9:40-10:00</td>
+         <td colspan=2 >9:40-10:00</td>
          <td rowspan=2 >Health</td>
          <td>NE137</td>
     </tr>
