--- a/Schedule.html
+++ b/Schedule.html
@@ -45,7 +45,7 @@
       <td>Mrs.Hampson</td>
     </tr>
     <tr>
-      <td>First Lunch</td>
+      <td colspan=4 align="center"><b><i>First Lunch</i></b></td>
     </tr>
     <tr>
       <td align="center" rowspan=2 >4</td>
