--- a/Schedule.html
+++ b/Schedule.html
@@ -45,7 +45,7 @@
       <td>Mrs.Hampson</td>
     </tr>
     <tr>
-      <td colspan=4 align="center"><b><i>First Lunch</i></b></td>
+      <td colspan=4 align="center" ><a href=https://www.cicis.com/media/1138/pizza_trad_pepperoni.png><b><i>First Lunch</i></b></td>
     </tr>
     <tr>
       <td align="center" rowspan=2 >4</td>
