--- a/Schedule.html
+++ b/Schedule.html
@@ -49,6 +49,7 @@
     </tr>
     <tr>
       <td align="center" rowspan=2 >4</td>
+      <td rowspan=2 >10:35-12:00</td>
       <td rowspan=2 >Enlgish</td>
       <td>NW127</td>
     </tr>
@@ -57,6 +58,7 @@
     </tr>
     <tr>
       <td  align="center" rowspan=2 >5</td>
+      <td rowspan=2 >12:05-12:55</td>
       <td rowspan=2 >Math</td>
       <td>NW126</td>
     </tr>
@@ -65,6 +67,7 @@
     </tr>
     <tr>
       <td  align="center" rowspan=2 >6</td>
+      <td rowspan=2 >1:00-1:50</td>
       <td rowspan=2>Biology</td>
       <td>NW221</td>
     </tr>
