--- a/My Final Website.html
+++ b/My Final Website.html
@@ -1,21 +1,10 @@
 <html>
+<head>      
 <title> 90's fashion </title
 body {
       background-image: url("https://hanslodge.com/images2/aesthetic-clipart-tumblr/a39315afb90c8d76155f1ad7f88d1e1a.jpg")
       }
-
-
-
-
-
-
-
-
-
-
-
-
-
+</head>
 
 </body>
 </html>
