--- a/Final.html
+++ b/Final.html
@@ -1,5 +1,5 @@
 <html>     
-<title> 90's fashion </title
+      <title> 90's fashion </title>
 body {
       background-image: url("https://66.media.tumblr.com/0fe4907748054943713c57d121ae815e/tumblr_onl9cmiUhv1vloheso2_1280.jpg")
       }
