--- a/Final.html
+++ b/Final.html
@@ -3,9 +3,8 @@
       <head>
         <link rel="stylesheet" type="text/css" href="mytestweb.css">
       </head>
-body {
-      background-image: url("https://66.media.tumblr.com/0fe4907748054943713c57d121ae815e/tumblr_onl9cmiUhv1vloheso2_1280.jpg")
-      }
+<body>
+      background-image: url("https://66.media.tumblr.com/0fe4907748054943713c57d121ae815e/tumblr_onl9cmiUhv1vloheso2_1280.jpg"
 
 </body>
 </html>
