--- a/Final.html
+++ b/Final.html
@@ -1,7 +1,7 @@
 <html>     
       <title> 90's fashion </title>
       <head>
-        <link rel="stylesheet" type="text/css" href="mytestweb.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
       </head>
 <body>
 </body>
