--- a/Final.html
+++ b/Final.html
@@ -1,9 +1,13 @@
 <html>     
-      <title> 90's fashion </title>
+ <title>80's & 90's fashion</title>
       <head>
         <link rel="stylesheet" type="text/css" href="style.css">
       </head>
 <body>
+      <p>
+          80's and 90's fashion was very Retro and vintage.
+         Everything was big, bold, and utterly glamorous. 
+      </p>  
 </body>
 </html>
       
