--- a/Final.html
+++ b/Final.html
@@ -1,9 +1,10 @@
 <html>
   <head>
+    <title>80's & 90's fashion</title>
         <link rel="stylesheet" type="text/css" href="style.css">
       </head>
 <body>
-   <title>80's & 90's fashion</title>
+   <h1>80's & 90's fashion</h1>
       <p>
           80's and 90's fashion was very Retro and vintage.
          Everything was big, bold, and utterly glamorous. 
