--- a/Final.html
+++ b/Final.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-       <title "center" >80's & 90's fashion</title>
+       <title>80's & 90's fashion</title>
         <link rel="stylesheet" type="text/css" href="style.css">
       </head>
 <body>
-   <h1>80's & 90's fashion</h1>
+   <h1 "center">80's & 90's fashion</h1>
       <p>
           80's and 90's fashion was very Retro and vintage.
          Everything was big, bold, and utterly glamorous. 
