--- a/Final.html
+++ b/Final.html
@@ -1,9 +1,26 @@
 <html>
   <head>
+    <style>
+div.a {
+  text-align: center;
+}
+      div.b {
+  text-align: left;
+}
+
+div.c {
+  text-align: right;
+} 
+
+div.d {
+  text-align: justify;
+} 
        <title>80's & 90's fashion</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+    </style>
       </head>
 <body>
+   <div class="a">
    <h1 "center">80's & 90's fashion</h1>
       <p>
           80's and 90's fashion was very Retro and vintage.
