--- a/Final.html
+++ b/Final.html
@@ -18,13 +18,16 @@ div.d {
   text-align: justify;
 } 
 
+p.a {
+  font-family: "Courier New", Courier, monospace;
+}
     </style>
       </head>
 <body>
    <div class="a">
    <h1 "center">80's & 90's fashion</h1>
-      <p>
-          80's and 90's fashion was very Retro and vintage.
+      
+         <p class="a"> 80's and 90's fashion was very Retro and vintage.
          Everything was big, bold, and utterly glamorous. 
       </p>  
 </body>
