--- a/Final.html
+++ b/Final.html
@@ -30,6 +30,8 @@ p.a {
          <p class="a"> 80's and 90's fashion was very Retro and vintage.
          Everything was big, bold, and utterly glamorous. 
       </p>  
+     <img src = "80's.jpg" width="25%">
+    </a>
 </body>
 </html>
       
