--- a/Final.html
+++ b/Final.html
@@ -21,6 +21,11 @@ div.d {
 p.a {
   font-family: "Courier New", Courier, monospace;
 }
+      
+h1 {
+      color: pink;
+      font-size: 28pt;
+      }
     </style>
     </head>
 <body>
