--- a/Final.html
+++ b/Final.html
@@ -37,6 +37,16 @@ h1 {
       </p>  
      <img src = "80's.jpg" width="25%">
     </a>
+  <hr>
+   <h2> Work Fashion </h2>
+  <p> Women in the 80's wore very busness outfits.
+ <ul>
+<li>blazers with shoulder pads</li>
+<li>wide pants</li>
+<li>dresses</li>
+<li> Skirts</li>
+<li>matching sets</li>  
+</ul>
 </body>
 </html>
       
