--- a/Final.html
+++ b/Final.html
@@ -38,14 +38,14 @@ h1 {
      <img src = "80's.jpg" width="25%">
     </a>
   <hr>
-   <h2> Work Fashion </h2>
-  <p> Women in the 80's wore very busness outfits.
- <ul>
-<li>blazers with shoulder pads</li>
-<li>wide pants</li>
-<li>dresses</li>
-<li> Skirts</li>
-<li>matching sets</li>  
+   <h1> Work Fashion </h1>
+  <p class="a"> Women in the 80's wore very busness outfits.
+ <ul class="a">
+<li >blazers with shoulder pads</li>
+<li >wide pants</li>
+<li >dresses</li>
+<li > Skirts</li>
+<li >matching sets</li>  
 </ul>
 </body>
 </html>
