--- a/Final.html
+++ b/Final.html
@@ -40,12 +40,12 @@ h1 {
   <hr>
    <h1> Work Fashion </h1>
   <p class="a"> Women in the 80's wore very busness outfits.
- <ul class="a">
-<li >blazers with shoulder pads</li>
-<li >wide pants</li>
-<li >dresses</li>
-<li > Skirts</li>
-<li >matching sets</li>  
+ <ul>
+<li class="a" >blazers with shoulder pads</li>
+<li class="a" >wide pants</li>
+<li class="a">dresses</li>
+<li class="a"> Skirts</li>
+<li class="a">matching sets</li>  
 </ul>
 </body>
 </html>
