--- a/Final.html
+++ b/Final.html
@@ -40,12 +40,13 @@ h1 {
   <hr>
    <h1> Work Fashion </h1>
   <p class="a"> Women in the 80's wore very busness outfits.
+ <div class="b">
  <ul>
-<li class="a" >blazers with shoulder pads</li>
-<li class="a" >wide pants</li>
-<li class="a">dresses</li>
-<li class="a"> Skirts</li>
-<li class="a">matching sets</li>  
+<li "left">blazers with shoulder pads</li>
+<li "left" >wide pants</li>
+<li "left">dresses</li>
+<li "left"> Skirts</li>
+<li "left">matching sets</li>  
 </ul>
 </body>
 </html>
