--- a/Final.html
+++ b/Final.html
@@ -40,13 +40,13 @@ h1 {
   <hr>
    <h1> Work Fashion </h1>
   <p class="a"> Women in the 80's wore very busness outfits.
- <div class="b">
+ <div class="a">
  <ul>
-<li "left">blazers with shoulder pads</li>
-<li "left" >wide pants</li>
-<li "left">dresses</li>
-<li "left"> Skirts</li>
-<li "left">matching sets</li>  
+<li "center">blazers with shoulder pads</li>
+<li "center" >wide pants</li>
+<li "center">dresses</li>
+<li "center"> Skirts</li>
+<li "center">matching sets</li>  
 </ul>
 </body>
 </html>
