--- a/Final.html
+++ b/Final.html
@@ -41,7 +41,7 @@ h1 {
    <h1> Work Fashion </h1>
   <p class="a"> Women in the 80's wore very busness outfits.
  <div class="a">
- <ul>
+ <ul "center">
 <li "center">blazers with shoulder pads</li>
 <li "center" >wide pants</li>
 <li "center">dresses</li>
