--- a/Final.html
+++ b/Final.html
@@ -24,7 +24,10 @@ p.a {
       
 h1 {
       color: pink;
-      font-size: 28pt;
+      font-size: 30pt;
+      }
+p {
+         color: yellow;
       }
     </style>
     </head>
