--- a/Final.html
+++ b/Final.html
@@ -33,7 +33,7 @@ p {
     </head>
 <body>
    <div class="a">
-   <h1 "center">80's & 90's fashion</h1>
+   <h1 "center">♡♡♡80's & 90's fashion♡♡♡</h1>
       
          <p class="a"> 80's and 90's fashion was very Retro and vintage.
          Everything was big, bold, and utterly glamorous. 
@@ -42,9 +42,9 @@ p {
     </a>
   <hr>
    <h1> Work Fashion </h1>
-  <p class="a"> Women in the 80's wore very busness outfits.
+  <p class="a"> Women in the 80's wore very busness outfits like:
  <div class="a">
- <ul "center">
+ <ul>
 <li "center">blazers with shoulder pads</li>
 <li "center" >wide pants</li>
 <li "center">dresses</li>
