--- a/Final.html
+++ b/Final.html
@@ -43,13 +43,13 @@ p {
   <hr>
    <h1> Work Fashion </h1>
   <p class="a"> Women in the 80's wore very busness outfits like:
- <div class="a">
+ <div class="b">
  <ul>
-<li "center">blazers with shoulder pads</li>
-<li "center" >wide pants</li>
-<li "center">dresses</li>
-<li "center"> Skirts</li>
-<li "center">matching sets</li>  
+<li "left">blazers with shoulder pads</li>
+<li "left" >wide pants</li>
+<li "left">dresses</li>
+<li "left"> Skirts</li>
+<li "left">matching sets</li>  
 </ul>
 </body>
 </html>
