--- a/Final.html
+++ b/Final.html
@@ -29,6 +29,12 @@ h1 {
 p {
          color:red;
       }
+      
+      li a {
+  display: block;
+  width: 60px;
+  background-color: #cc0000;
+}
     </style>
     </head>
 <body>
@@ -45,11 +51,11 @@ p {
   <p class="a"> Women in the 80's wore very busness outfits like:
  <div class="b">
  <ul>
-<li "left">blazers with shoulder pads</li>
-<li "left" >wide pants</li>
-<li "left">dresses</li>
-<li "left"> Skirts</li>
-<li "left">matching sets</li>  
+   <li<a"left">blazers with shoulder pads</a></li>
+  <li<a "left" >wide pants</a></li>
+<li<a "left">dresses</a></li>
+<li<a "left"> Skirts</a></li>
+<li<a "left">matching sets</a></li>  
 </ul>
 </body>
 </html>
