--- a/Final.html
+++ b/Final.html
@@ -37,14 +37,14 @@ p {
    <div class="a">
    <h1 "center">♡♡♡80's & 90's fashion♡♡♡</h1>
       
-         <p class="a"> 80's and 90's fashion was very Retro and vintage.
-         Everything was big, bold, and utterly glamorous. 
+         <p class="a"><b> 80's and 90's fashion was very Retro and vintage.
+           Everything was big, bold, and utterly glamorous.</b> 
       </p>  
      <img src = "80's.jpg" width="25%">
     </a>
   <hr>
    <h1> Work Fashion </h1>
-  <p class="a"> Women in the 80's wore very busness outfits like:
+  <p class="a"><b> Women in the 80's wore very busness outfits like:</b></p>
  <div class="b">
  <ul>
 <li"left">blazers with shoulder pads</li>
