--- a/Final.html
+++ b/Final.html
@@ -53,6 +53,9 @@ p {
 <li "left"> Skirts</li>
 <li "left">matching sets</li>  
 </ul>
+    <div class="a">
+   <img src "center" = "business" width"25%">
+   </a>
 </body>
 </html>
       
