--- a/Final.html
+++ b/Final.html
@@ -54,7 +54,7 @@ p {
 <li "left">matching sets</li>  
 </ul>
     <div class="a">
-   <img src "center" = "business" width"25%">
+   <img src "center" = "business.jpg" width="25%">
    </a>
 </body>
 </html>
