--- a/Final.html
+++ b/Final.html
@@ -52,9 +52,8 @@ p {
 <li "left">dresses</li>
 <li "left"> Skirts</li>
 <li "left">matching sets</li>  
-</ul>
-    <div class="a">
-   <img src "center" = "business.jpg" width="25%">
+   </ul>
+   <img src  = "business.jpg" width="25%">
    </a>
 </body>
 </html>
