--- a/Final.html
+++ b/Final.html
@@ -55,6 +55,9 @@ p {
    </ul>
    <img src  = "business.jpg" width="25%">
    </a>
+  <div class="a">
+  <img src "center" = "123.jpg" width="30%">
+  </a>
 </body>
 </html>
       
