--- a/Final.html
+++ b/Final.html
@@ -43,7 +43,7 @@ p {
      <img src = "80's.jpg" width="25%">
     </a>
   <hr>
-   <h1> Work Fashion </h1>
+   <h1> Fashion </h1>
   <p class="a"><b> Women in the 80's wore very busness outfits like:</b></p>
  <div class="b">
  <ul>
@@ -53,11 +53,11 @@ p {
 <li "left"> Skirts</li>
 <li "left">matching sets</li>  
    </ul>
-   <img src  = "business.jpg" width="25%">
-   </a>
-  <div class="a">
-  <img src "center" = "123.jpg" width="25%">
-  </a>
+<hr>
+   <h1>More FASHION</h1>
+   <p class="a"><b> The '80s was a decade of bold style, colors, and permed hair,
+     with trends spanning ripped tights and leather to polished oversized, padded blazers.</b>
+   </p>
 </body>
 </html>
       
