--- a/Final.html
+++ b/Final.html
@@ -54,7 +54,7 @@ p {
 <li "left">matching sets</li>  
    </ul>
 <hr>
-   <h1>More FASHION</h1>
+   <h1 "center">More FASHION</h1>
    <p class="a"><b> The '80s was a decade of bold style, colors, and permed hair,
      with trends spanning ripped tights and leather to polished oversized, padded blazers.</b>
    </p>
