--- a/Final.html
+++ b/Final.html
@@ -44,7 +44,7 @@ p {
     </a>
   <hr>
    <h1> Fashion </h1>
-  <p class="a"><b> Women in the 80's wore very busness outfits like:</b></p>
+  <p class="a"><b> Women in the 80's wore very business for work like:</b></p>
  <div class="b">
  <ul>
 <li"left">blazers with shoulder pads</li>
@@ -54,6 +54,7 @@ p {
 <li "left">matching sets</li>  
    </ul>
 <hr>
+   <div class="a">
    <h1 "center">More FASHION</h1>
    <p class="a"><b> The '80s was a decade of bold style, colors, and permed hair,
      with trends spanning ripped tights and leather to polished oversized, padded blazers.</b>
