--- a/Final.html
+++ b/Final.html
@@ -58,7 +58,10 @@ p {
    <h1 "center">More FASHION</h1>
    <p class="a"><b> The '80s was a decade of bold style, colors, and permed hair,
      with trends spanning ripped tights and leather to polished oversized, padded blazers.</b>
-   </p>
+   </p>  
+   <div class="a">
+   <h1 "center">Hair</h1>
+     <p class="a"><b> 
 </body>
 </html>
       
