--- a/Final.html
+++ b/Final.html
@@ -61,7 +61,15 @@ p {
    </p>  
    <div class="a">
    <h1 "center">Hair</h1>
-     <p class="a"><b> 
+     <p class="a"><b> In the 1980s, women hairstyles were very big and bright colored.
+       They wore long, volumous culed hair. 
+       The mullet was a hairstyle that was extremely popular in the '80s. Crimps, Curls, and Perms became even more popular in the 80s.
+       A lot of women, who were blessed to have beautiful curls often teased and spray it to reach incredible heights making those with straight hair do everything to achieve that look. 
+       Another hairstyle that was pretty popular at the time was ponytails with scrunchies.
+       A scrunchie is a  large, fabric hair-tie, often in bright neon or "hot" colors.  
+       Ponytails were usually worn high on the back or side of the head and secured with scrunchies for an overall effect to look fun and carefree. 
+       These hairstyles were the center of attention during the 1980s.
+       </b></p>
 </body>
 </html>
       
