--- a/Final.html
+++ b/Final.html
@@ -60,7 +60,7 @@ p {
      with trends spanning ripped tights and leather to polished oversized, padded blazers.</b>
    </p>  
    <div class="a">
-   <h1 "center">Hair</h1>
+   <h1 "center">💇Hair💇</h1>
      <p class="a"><b> In the 1980s, women hairstyles were very big and bright colored.
        They wore long, volumous culed hair. 
        The mullet was a hairstyle that was extremely popular in the '80s. Crimps, Curls, and Perms became even more popular in the 80s.
