--- a/Final.html
+++ b/Final.html
@@ -72,15 +72,15 @@ p {
        </b></p>
      
      
-     <div class="b">
-       <h1 "left">Shoes</h1>  
+     <div class="a">
+       <h1 "center">Shoes</h1>  
        <div class="c">
        <img src = "heels.jpg" width="25%">
     </a>
        <ol>
-        <li"left">Capezio Jazz Shoes</li>
-        <li"left">Huaraches</li>
-        <li"left">Dyeable Formal Shoes</li>
+        <li>Capezio Jazz Shoes</li>
+        <li>Huaraches</li>
+        <li>Dyeable Formal Shoes</li>
        </ol>
 
 </body>
