--- a/Final.html
+++ b/Final.html
@@ -74,14 +74,14 @@ p {
      
      <div class="a">
        <h1 "center">Shoes</h1>  
+       <ol>
+        <li "left" >Capezio Jazz Shoes</li>
+        <li "left" >Huaraches</li>
+        <li "left" >Dyeable Formal Shoes</li>
+       </ol>
        <div class="c">
        <img src = "heels.jpg" width="25%">
     </a>
-       <ol>
-        <li>Capezio Jazz Shoes</li>
-        <li>Huaraches</li>
-        <li>Dyeable Formal Shoes</li>
-       </ol>
 
 </body>
 </html>
