--- a/Final.html
+++ b/Final.html
@@ -79,10 +79,10 @@ p {
         <li "left" >Huaraches</li>
         <li "left" >Dyeable Formal Shoes</li>
        </ol>
-       <div class="c">
+       <div class="a">
        <img src = "heels.jpg" width="25%">
     </a>
-
+      
 </body>
 </html>
       
