--- a/Final.html
+++ b/Final.html
@@ -85,7 +85,8 @@ p {
        <div class="a">
        <img src = "END.jpg" width="30%">
     </a>
-      
+      <hr>
+  Copyright (c) 2019. All rights reserved.
 </body>
 </html>
       
