--- a/Final.html
+++ b/Final.html
@@ -80,7 +80,7 @@ p {
         <li "left" >Dyeable Formal Shoes</li>
        </ol>
        
-       
+       <div class="a">
        <h1 "center"> 🖤  ♡  🖤 </h1> 
        <div class="a">
        <img src = "END.jpg" width="30%">
