--- a/Final.html
+++ b/Final.html
@@ -63,8 +63,8 @@ p {
    <div class="a">
    <h1 "center">💇Hair💇</h1>
      <p class="a"><b> In the 1980s, women hairstyles were very big and bright colored.
-       They wore long, volumous culed hair. <a href=https://www.cicis.com/media/1138/pizza_trad_pepperoni.png><b><i>mullet</i></b>
-       The mullet was a hairstyle that was extremely popular in the '80s. Crimps, Curls, and Perms became even more popular in the 80s.
+       They wore long, volumous culed hair.
+       The <a href=https://i.pinimg.com/236x/4b/3d/e5/4b3de595d796bb672e433efea3d09101.jpg><b><i>mullet</i></b> was a hairstyle that was extremely popular in the '80s. Crimps, Curls, and Perms became even more popular in the 80s.
        A lot of women, who were blessed to have beautiful curls often teased and spray it to reach incredible heights making those with straight hair do everything to achieve that look. 
        Another hairstyle that was pretty popular at the time was ponytails with scrunchies.
        A scrunchie is a  large, fabric hair-tie, often in bright neon or "hot" colors.  
