--- a/Final.html
+++ b/Final.html
@@ -40,7 +40,7 @@ p {
          <p class="a"><b> 80's and 90's fashion was very Retro and vintage.
            Everything was big, bold, and utterly glamorous.</b> 
       </p>  
-     <img src = "80's.jpg" width="25%">
+     <img src = "LOVE.jpg" width="25%">
     </a>
   <hr>
    <h1> Fashion </h1>
