--- a/Final.html
+++ b/Final.html
@@ -1,6 +1,6 @@
 <html>   
   <head>
-    <title>80's & 90's fashion</title>
+    <title>80's fashion</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     <style>
 div.a {
@@ -37,7 +37,7 @@ p {
    <div class="a">
    <h1 "center">♡♡♡80's & 90's fashion♡♡♡</h1>
       
-         <p class="a"><b> 80's and 90's fashion was very Retro and vintage.
+         <p class="a"><b> 80's fashion was very Retro and vintage.
            Everything was big, bold, and utterly glamorous.</b> 
       </p>  
      <img src = "LOVE.jpg" width="25%">
