--- a/Final.html
+++ b/Final.html
@@ -35,7 +35,7 @@ p {
 <body>
   
    <div class="a">
-   <h1 "center">♡♡♡80's & 90's fashion♡♡♡</h1>
+   <h1 "center">♡♡♡80's fashion♡♡♡</h1>
       
          <p class="a"><b> 80's fashion was very Retro and vintage.
            Everything was big, bold, and utterly glamorous.</b> 
