--- a/Final.html
+++ b/Final.html
@@ -44,7 +44,7 @@ p {
     </a>
   <hr>
    <h1> Fashion </h1>
-  <p class="a"><b> Women in the 80's wore very business for work like:</b></p>
+  <p class="a"><b> Women in the 80's wore very business outfits when they went to work:</b></p>
  <div class="b">
  <ul>
 <li"left">blazers with shoulder pads</li>
@@ -57,7 +57,7 @@ p {
    <div class="a">
    <h1 "center">More FASHION</h1>
    <p class="a"><b> The '80s was a decade of bold style, colors, and permed hair,
-     with trends spanning ripped tights and leather to polished oversized, padded blazers.</b>
+     with trends spanning ripped tights and leather to polished oversized.</b>
    </p>
      <hr>
    <div class="a">
